--- a/index.html
+++ b/index.html
@@ -14,32 +14,32 @@
         <div class="title">
           <a href="">image 1</a>
         </div>
-        <img src="https://c4.wallpaperflare.com/wallpaper/944/850/346/cartoon-panda-kung-fu-wallpaper-preview.jpg" alt="">
+        <img class="foto" src="https://c4.wallpaperflare.com/wallpaper/944/850/346/cartoon-panda-kung-fu-wallpaper-preview.jpg" alt="">
       </li>
       <li>
         <div class="title">
           <a href="">image 2</a>
         </div>
-        <img src="https://c4.wallpaperflare.com/wallpaper/460/684/971/kung-fu-panda-3-movies-artwork-wallpaper-preview.jpg" alt="">
+        <img class="foto" src="https://c4.wallpaperflare.com/wallpaper/460/684/971/kung-fu-panda-3-movies-artwork-wallpaper-preview.jpg" alt="">
       </li>
       <li>
         <div class="title">
           <a href="">image 3</a>
         </div>
-        <img src="https://c4.wallpaperflare.com/wallpaper/761/273/222/kung-fu-panda-kung-fu-panda-3-po-kung-fu-panda-wallpaper-preview.jpg" alt="">
+        <img class="foto" src="https://c4.wallpaperflare.com/wallpaper/761/273/222/kung-fu-panda-kung-fu-panda-3-po-kung-fu-panda-wallpaper-preview.jpg" alt="">
       </li>
       <li>
         <div class="title">
         
           <a href="">image 4</a>
         </div>
-          <img src="https://i.pinimg.com/736x/23/ac/53/23ac53835b0def89972ea632ee0cee0b.jpg" alt="">
+          <img class="foto" src="https://i.pinimg.com/736x/23/ac/53/23ac53835b0def89972ea632ee0cee0b.jpg" alt="">
       </li>
       <li>
         <div class="title">
           <a href="">image 5</a>
         </div>
-        <img src="https://ichef.bbci.co.uk/images/ic/640x360/p090jd62.jpg" alt="">
+        <img class="foto" src="https://ichef.bbci.co.uk/images/ic/640x360/p090jd62.jpg" alt="">
       </li>
     </ul>
   </div>
